name:                blow
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/blow#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable blow
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                      , scotty
                      , text
                      , hext >= 0.1.0.4
                      , transformers >= 0.3.0.0
                      , cereal >= 0.5.5.0
                      , directory >= 1.3.0.2
                      , transformers >= 0.5.2.0
                      , bytestring >= 0.10
                      , natural-transformation >= 0.4
                      , hspec
                      --, serialise == 0.2.*
                      --, cborg == 0.2.*

test-suite unit-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test
  ghc-options:          -Wall
  build-depends:        base
                        , hspec == 2.*
                        , hspec-discover
  other-modules:
    Probability.Serialize.BayesReprSpec
  
