name:                blow
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/blow#readme
license:             BSD3
license-file:        LICENSE
author:              Gleb Parakhonskiy
maintainer:          example@example.com
copyright:           Gleb Parakhonskiy
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src  
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings
  exposed-modules:     LibMain
                      , Controller.BayesController
                      , Data.BayesRepr
                      , Data.Classification
                      , Route.TextClassificationResource
                      , Util.PdfParsing
                      
  build-depends:       base >= 4.7 && < 5
                      , scotty
                      , text
                      , hext >= 0.1.0.4
                      , cereal >= 0.5.5.0
                      , directory >= 1.3.0.2
                      , transformers >= 0.5.2.0
                      , bytestring >= 0.10
                      , natural-transformation >= 0.4
                      , hspec
                      , containers
                      , unordered-containers
                      , hashable
                      , aeson
                      , wai-extra
                      , io-streams

executable blow
  hs-source-dirs:      exc  
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                      , blow

test-suite unit-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test
  ghc-options:          -Wall
  build-depends:        base
                        , hspec == 2.*
                        , hspec-discover
                        , QuickCheck
                        , generic-arbitrary
                        , blow
                        , unordered-containers
                        , cereal
                        , containers
                        , text
                        , hext
                        , bytestring
                        , hashable
                        , hspec-wai
                        , transformers
                        , hspec-expectations-match
                        , directory
  other-modules:  
          Controller.BayesControllerSpec
          , Data.BayesReprSpec
          , Route.TextClassificationResourceSpec
